# sdk-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  security.yml
examples/: basic.rs  files.rs
src/: error.rs  lib.rs  prelude.rs
src/client/: config.rs  mod.rs  nvisy.rs
src/model/: document.rs  file.rs  health.rs  integration.rs  mod.rs  webhook.rs  workspace.rs
src/service/: documents.rs  files.rs  health.rs  integrations.rs  mod.rs  webhooks.rs  workspaces.rs
